# python-rls

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  alembic.md  delete-policies.sql  document.md  psqlcommans.sql  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pipeline.yml  quality.yml  release.yml  test.yml
alembic/versions/: 04ae15da6298_add_items_table.py  22db913c0bf7_add_items_table.py
rls/: alembic_rls.py  create_policies.py  database.py  register_rls.py  rls_session.py  rls_sessioner.py  schemas.py  utils.py
test/: database.py  engines.py  fastapi_sample.py  main.py  models.py  requirements.txt  setup.py  test_alembic.py  test_fastapi.py  test_main.py  test_rls.py  test_session.py  test_sessioner.py
test/alembic/: env.py
test/alembic/versions/: 19c56c94152b_initial.py  479bd311af91_initial_updates.py  4e47974b6aaf_initial_updates.py  5a3640bfc31a_add_users_table_equal_to_account_id_.py  75561a88aaf0_test_custom_operation.py  75827d09d6c3_change_user_table_policies_permissive.py  75b261ce4397_add_smaller_than_or_equal_instead_of_.py  c3da625851bb_test_custom_operation.py  fd7f5bb078af_initial.py
