[tool.poetry]
name = "rls"
version = "0.2.0"
description = "fastapi sqlalchemy rls integration package"
authors = [
  "DelfinaCare <open-source@delfina.com>"
]
license = "MIT"
readme = "README.md"
packages = [
  {include = "rls"},
  {include = "rls/py.typed"},
]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.9.1"
sqlalchemy = ">=2.0.34"
alembic = ">=1.13.3"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.2"
pre-commit = ">=3.8.0"
uvicorn = ">=0.30.6"
httpx = ">=0.27.2"
deptry = ">=0.20.0"
requests = ">=2.32.3"
alembic = ">=1.13.3"
fastapi = ">=0.115.0"

[tool.semantic_release]
branch= "main"
assets = []
commit_message = "{version}\n\nNew Release"
commit_parser = "angular"
logging_use_named_masks = true
tag_format = "v{version}"
commit_version_number = true
version_variable = [
    "src/tryceratops/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
    "pyproject.toml:project.version"
]
version_pattern = [
    "README.md:rev: v{version}",
    "docs/CONTRIBUTING.md:rls, version {version}"
]
major_on_zero = false
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.release-action]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[project]
name = "rls"
version = "0.2.0"
authors = [
  { name = "DelfinaCare", email = "open-source@delfina.com" }
]
description = "python sqlalchemy rls integration package for psql"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DelfinaCare/rls"
Issues = "https://github.com/DelfinaCare/rls/issues"
