[tool.poetry]
name = "rls"
version = "0.2.0"
description = "fastapi sqlalchemy rls integration package"
authors = [
  "DelfinaCare <open-source@delfina.com>"
]
license = "MIT"
readme = "README.md"
packages = [
  {include = "rls"},
]
include = [
  "README.md",
  "LICENSE",
  "rls/py.typed",
  ]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.9.1"
sqlalchemy = ">=2.0.34"
alembic = ">=1.13.3"
fastapi = ">=0.115.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.2"
testing-postgresql = "^1.3.0"


[project]
name = "rls"
version = "0.2.0"
authors = [
  { name = "DelfinaCare", email = "open-source@delfina.com" }
]
description = "python sqlalchemy rls integration package for psql"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DelfinaCare/rls"
Issues = "https://github.com/DelfinaCare/rls/issues"
